# current_semnav_migration

./: .gitignore  CMakeLists.txt  README.md  package.xml  q
bag_files/: metadata.yaml
config/: launch_args.yaml
data/: 2squares.csv  2x2rect.csv  README.md  channel_test.csv  mass_10.0_1.5x1m.csv  mass_10.0_4x6m.csv  mass_10.0_scaled.csv  mass_5.0_scaled.csv  poly_riskpercentage_mass_5_frequency_1.6111111111111112.csv  rect.csv  robot1_failure.csv  robot1_success.csv  robot1_success_region2_3.csv  robot1_success_region2_3_trimmed.csv  robot1_success_region3_1_trimmed.csv  robot2_failure.csv  robot2_success.csv  robot2_success_incomplete.csv  robot2_success_region2_1_chrono.csv
data/archive/: 1x1rect.csv  4x4rect.csv  multi_rect.csv  pentagon.csv  poly_riskpercentage_mass_5.0.csv
data/obstacle_maps/: diag_squares.csv  gradient_obstacle_map.csv  mass_5.0_4x6m.csv  stiffness_map1_obstacles.csv  stiffness_map2_obstacles.csv  stiffness_map4_obstacles.csv  stiffness_map5_obstacles.csv  stiffness_map6_obstacles.csv  terrain_map_test.csv  test_semantic_map.csv  velocitymap.csv
data/paths/: diag_squares_path.csv  robot1_success_region2_3_chrono.csv  robot1_success_region3_1_chrono.csv  robot2_failure_chrono.csv  stiffness_map5_path.csv  stiffness_map5_path1.csv  stiffness_map5_path2.csv  stiffness_map5_path3.csv  stiffness_map6_path.csv  stiffness_map6_path1.csv  stiffness_map6_path2.csv  stiffness_map6_path3.csv  stiffness_map6_path4.csv  stiffness_map6_path5.csv  stiffness_map6_path6.csv  stiffness_map6_path7.csv  trajectory.csv
data/risk_maps/: stiffness_map1.csv  stiffness_map3.csv  stiffness_map4.csv  stiffness_map5.csv  stiffness_map6.csv
data/scripts/: disjoint.py  generate_line_path.py  generate_map  generate_map.cpp  generate_map.h  map_gen_wclicks_gui.py  plot_obstacle.py  plot_shape.py  plot_trajectory.py  process_csv.py  risk_to_obstacle_map.py  rotate_path.py  scale_obstacle_csv.py  scale_path.py  scale_path_csv.py  terrain_to_semantic_map.py  transform_obstacle_csv.py  trim_path.py  trim_path_csv.py
data/unprocessed/: mass_10.0_1.5x1m.csv  mass_10.0_6x4m.csv  mass_5.0_1.5x1m.csv  mass_5.0_6x4m.csv  robot1_failure.csv  robot1_success_region3_1.csv  robot2_failure.csv  robot2_success_region2_1.csv  robot2_success_region2_1_trimmed.csv
extras/object_pose_interface_msgs/: CMakeLists.txt  package.xml
extras/object_pose_interface_msgs/msg/: .KeypointDetections3D.msg.swp  KeypointDetections3D.msg
include/: .reactive_planner_lib.h.swp  reactive_planner_lib.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/semnav/lib/semnav/: fake_lidar_publisher  fake_map_publisher  fake_odometry_publisher  map_debug  trajectory_recorder.py  velocity_visualizer
install/semnav/share/ament_index/resource_index/package_run_dependencies/: semnav
install/semnav/share/ament_index/resource_index/parent_prefix_path/: semnav
install/semnav/share/semnav/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/semnav/share/semnav/cmake/: ament_cmake_export_include_directories-extras.cmake  semnavConfig.cmake
install/semnav/share/semnav/data/: poly_riskpercentage_mass_10.0.csv  rect.csv
install/semnav/share/semnav/data/scripts/: generate_map.cpp  generate_map.h  plot_trajectory.py
install/semnav/share/semnav/launch/: debug_sim_navigation_turtlebot3.launch.py  sim_navigation_turtlebot3.launch.py  turtlebot3_polygon_world.launch.py
install/semnav/share/semnav/models/polygons/: model.sdf
install/semnav/share/semnav/worlds/: custom_world.sdf
launch/: debug_sim_navigation_turtlebot3.launch.py  gazebo_robot.launch.py  ignition.launch.py  launch_sim.launch.py  navigation_simulation.launch.py  navigation_turtlebot_onboard.launch  sim_navigation.launch.py  sim_navigation_turtlebot3.launch.py  turtlebot3_house.launch.py  turtlebot3_polygon_world.launch.py  turtlebot4_ignition.launch.py  turtlebot4_ignition_custom.launch.py  turtlebot4_spawn.launch.py
launch/holonomic_launch/: launch_sim.launch.py  robot_state_publisher.launch.py  rsp.launch.py
log/: latest_build
log/build_2024-07-03_10-57-22/: .events.log.swp
models/: robot1_failure_chrono.csv
models/polygons/: model.config  model.sdf
src/: .human_following.cpp.swp  .human_following_fallen.cpp.swp  .human_following_signal.cpp.swp  .navigation.cpp.swp  .navigation_humans.cpp.swp  .navigation_semantic.cpp.swp  fake_lidar_publisher.cpp  fake_map_publisher.cpp  fake_odometry_publisher.cpp  human_following.cpp  human_following_fallen.cpp  human_following_signal.cpp  map_debug.cpp  navigation.cpp  navigation_humans.cpp  navigation_lidar.cpp  navigation_semantic.cpp  trajectory_recorder.py  turtlebot3_map_publisher.cpp  vector_field_plot.cpp  velocity_visualization_node.cpp
src/libraries/: polygeom_lib.cpp  reactive_planner_lib.cpp  ros_functions.py
src/tracking/: trajectory_recorder.py
worlds/: polygon_world.sdf  slow_empty.sdf
